k8s/prod-contabo/set-replicas.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ministake2
spec:
  replicas: 3
