k8s/prod-contabo/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-staging   #  try 1st
    # cert-manager.io/cluster-issuer: letsencrypt-prod      #  use if succeeded
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: mini-ing-tls
  namespace: prod
spec:
  rules:
  - host: ministake-contabo.thinkland.de
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ministake2
            port:
              number: 8080
  tls:
  - hosts:
    - ministake-contabo.thinkland.de
    secretName: mini-ing-cert
